# pharma-nel

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  README.md  main.py  pyproject.toml
backend/docker/: Dockerfile
backend/src/: container.py  main.py
backend/src/api/: decorators.py  dependencies.py
backend/src/api/middleware/: exception_handler.py  logging.py
backend/src/api/routes/: entity.py  extract.py  health.py  profile.py
backend/src/api/schemas/: base.py  health.py
backend/src/api/schemas/entity/: response.py
backend/src/api/schemas/extract/: __init__.py  request.py  response.py
backend/src/api/schemas/extraction/: response.py
backend/src/api/schemas/profile/: response.py
backend/src/api/services/: health_checker.py
backend/src/domain/entities/: application.py  dosage_form.py  drug.py  drug_label.py  extraction.py  interaction.py  manufacturer.py  pharm_class.py  pharma_graph.py  product.py  profile.py  reaction.py  route.py  substance.py
backend/src/domain/exceptions/: base.py  drug.py  extraction.py  profile.py
backend/src/domain/ports/: clients.py
backend/src/domain/services/: drug_service.py  extraction_service.py  ner_service.py  profile_service.py  substance_enrichment_service.py  substance_service.py
backend/src/infrastructure/clients/: base.py  fda_client.py  openai_client.py  rxnorm_client.py  unii_client.py
backend/src/infrastructure/database/: connection.py  initializer.py
backend/src/infrastructure/database/repositories/: base.py  drug_repository.py  extraction_repository.py  openfda_graph_repository.py  profile_repository.py  substance_repository.py
backend/src/infrastructure/exceptions/: client.py  database.py
backend/src/infrastructure/pdf/: extractor.py
backend/src/prompts/: __init__.py  ner_extraction.py
backend/src/shared/: config.py  logging.py  types.py
backend/tests/: conftest.py
backend/tests/fixtures/: containers.py
backend/tests/integration/: test_entity_routes.py  test_extract_routes.py
backend/tests/unit/: test_exceptions.py  test_health.py
backend/tests/unit/api/: test_decorators.py  test_exception_handler.py
backend/tests/unit/domain/entities/: test_drug.py  test_substance.py
backend/tests/unit/domain/services/: test_drug_service.py  test_ner_service.py  test_substance_service.py
docs/: BACKEND.md  BACKEND_ARCHITECTURE.md  FRONTEND.md  (+2 more)
(+57 files in other folders)
